--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=asn2
+
+server.tomcat.accesslog.enabled=true 
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://dpg-cpjomhacn0vc73aq27cg-a.oregon-postgres.render.com/cmpt276_asn2_db_v35l 
+# spring.datasource.url=jdbc:postgresql://dpg-cpjomhacn0vc73aq27cg-a/cmpt276_asn2_db_v35l internal db
+spring.datasource.username=cmpt276_asn2_db_v35l_user
+spring.datasource.password=NPq9FAHEP7B7kRMi3uLSgjC18UumkIBS
