linked main page and add rectangle page; create+read data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.url=jdbc:postgresql://dpg-cpjomhacn0vc73aq27cg-a.oregon-postgr
 # spring.datasource.url=jdbc:postgresql://dpg-cpjomhacn0vc73aq27cg-a/cmpt276_asn2_db_v35l internal db
 spring.datasource.username=cmpt276_asn2_db_v35l_user
 spring.datasource.password=NPq9FAHEP7B7kRMi3uLSgjC18UumkIBS
+
+# psql -h dpg-cpjomhacn0vc73aq27cg-a.oregon-postgres.render.com -U cmpt276_asn2_db_v35l_user -d cmpt276_asn2_db_v35l
