editRect: added square | deleteRect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.datasource.url=jdbc:postgresql://dpg-cpjomhacn0vc73aq27cg-a.oregon-postgr
 spring.datasource.username=cmpt276_asn2_db_v35l_user
 spring.datasource.password=NPq9FAHEP7B7kRMi3uLSgjC18UumkIBS
 
+spring.mvc.hiddenmethod.filter.enabled: true
+
 # psql -h dpg-cpjomhacn0vc73aq27cg-a.oregon-postgres.render.com -U cmpt276_asn2_db_v35l_user -d cmpt276_asn2_db_v35l
